additional fixes to simple problems

--- a/applications/sellar_opt/sellar_gen3.ipynb
+++ b/applications/sellar_opt/sellar_gen3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e336401a-88b1-4773-9224-8b53e59c4b13",
    "metadata": {
     "execution": {
@@ -18,22 +18,22 @@
    "source": [
     "from graph.graphutils import flat_graph_formulation, VAR, COMP, SOLVER\n",
     "from graph.graphutils import all_variables, edges_to_Ein_Eout, namefromid\n",
-    "from modeling.compute import Var\n",
-    "from modeling.gen2.execution import edges_from_components\n",
-    "from modeling.gen2.transformations import generate_components_and_residuals\n",
-    "from modeling.gen3.nesting import Model, adda, addf, setsolvefor\n",
+    "from src.v1.symbolic import Var\n",
+    "from src.v2.execution import edges_from_components\n",
+    "from src.v2.transformations import generate_components_and_residuals\n",
     "from graph.operators import sort_scc, reorder_merge_solve\n",
     "from graph.workflow import get_f, OPT, NEQ, OBJ, order_from_tree, default_solver_options, mdao_workflow\n",
-    "from engine.gen2mdao.workflow_mdao import mdao_workflow_with_args\n",
-    "from engine.gen2mdao.assembly import build_archi\n",
-    "from engine.gen2mdao.runpipeline import nestedform_to_mdao\n",
+    "from src.v2.workflow_mdao import mdao_workflow_with_args\n",
+    "from src.v2.mdaobuild import build_archi\n",
+    "from src.v2.runpipeline import nestedform_to_mdao\n",
+    "from src.v3.nesting import Model, adda, addf, setsolvefor\n",
     "import openmdao.api as om\n",
     "from sympy import exp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9a1938cd-7ad2-4748-ad60-5c9ab95573c9",
    "metadata": {
     "execution": {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2cf5f6bd-ebbb-46de-98c2-43070bda5371",
    "metadata": {
     "execution": {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "781d6bce-28c9-482b-94c6-b8299a0765b7",
    "metadata": {
     "execution": {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4fddaf2e-b411-46d4-838a-21270e2a8ba0",
    "metadata": {
     "execution": {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "2ef307b1-a099-4fae-a7b9-9103ca8681ca",
    "metadata": {
     "execution": {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "id": "a7afc56a-06fb-410a-9236-6a8d21c8c50f",
    "metadata": {
     "execution": {
@@ -161,7 +161,7 @@
    },
    "outputs": [],
    "source": [
-    "prob, mdao_in, groups = nestedform_to_mdao(edges, tree, model.components, solvers_options, comp_options, var_options, nodetyperepr, mdf=True)"
+    "prob, mdao_in, groups, _,_ = nestedform_to_mdao(edges, tree, model.components, solvers_options, comp_options, var_options, nodetyperepr, mdf=True)"
    ]
   },
   {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7c9e4f85-a1ed-43b0-9989-19e1948f925e",
    "metadata": {
     "execution": {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "ab96a685",
    "metadata": {},
    "outputs": [
@@ -203,11 +203,11 @@
       "text/plain": [
        "[(SOLVER, 1, None),\n",
        " (SOLVER, 2, 1),\n",
-       " (ENDCOMP, [0, 1, 2], 2),\n",
+       " (ENDCOMP, [2, 0, 1], 2),\n",
        " (ENDCOMP, [3, 5, 4], 1)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9be05c12-27e5-422c-9a69-fea46f1db6fd",
    "metadata": {
     "execution": {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "bfb3d25c-f879-473c-9625-25c9c773f652",
    "metadata": {
     "execution": {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "fb9db907-74d5-45bd-9451-7ebae1239e07",
    "metadata": {
     "execution": {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "7e3ce34c-0197-46c5-8daf-41dfc1b53aad",
    "metadata": {
     "execution": {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "6bf98729-20a5-450e-b77f-3e5b3a240cdb",
    "metadata": {
     "execution": {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "f16fa355-e2f8-44e9-9df8-9fefa417cec4",
    "metadata": {
     "execution": {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "0b35b693-e64e-488c-8daf-c86074184443",
    "metadata": {
     "execution": {
@@ -348,12 +348,12 @@
    },
    "outputs": [],
    "source": [
-    "prob, mdao_in, groups = build_archi(nedges, ntree, wfmdao)"
+    "prob, mdao_in, groups = build_archi(nedges, ntree, wfmdao, namingfunc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "bd64a9a1-cccb-4260-b8a6-05cb9a415b39",
    "metadata": {
     "execution": {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "07c72eaf-c23e-42c3-bf58-674cad75ce04",
    "metadata": {
     "execution": {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 19,
    "id": "65e093bd-ca4a-4081-ae4d-3b3bbd906365",
    "metadata": {
     "execution": {
@@ -411,60 +411,50 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
+      "===\n",
+      "s_2\n",
+      "===\n",
       "NL: Newton Converged in 3 iterations\n",
       "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
+      "===\n",
+      "s_2\n",
+      "===\n",
       "NL: Newton Converged in 0 iterations\n",
       "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
+      "===\n",
+      "s_2\n",
+      "===\n",
       "NL: Newton Converged in 3 iterations\n",
       "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
+      "===\n",
+      "s_2\n",
+      "===\n",
       "NL: Newton Converged in 3 iterations\n",
       "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
+      "===\n",
+      "s_2\n",
+      "===\n",
+      "NL: Newton Converged in 3 iterations\n",
+      "\n",
+      "===\n",
+      "s_2\n",
+      "===\n",
+      "NL: Newton Converged in 3 iterations\n",
+      "\n",
+      "===\n",
+      "s_2\n",
+      "===\n",
       "NL: Newton Converged in 2 iterations\n",
       "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
-      "NL: Newton Converged in 2 iterations\n",
-      "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
-      "NL: Newton Converged in 3 iterations\n",
-      "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
-      "NL: Newton Converged in 3 iterations\n",
-      "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
-      "NL: Newton Converged in 2 iterations\n",
-      "\n",
-      "=======\n",
-      "s_1.s_2\n",
-      "=======\n",
+      "===\n",
+      "s_2\n",
+      "===\n",
       "NL: Newton Converged in 1 iterations\n",
       "Optimization terminated successfully    (Exit mode 0)\n",
-      "            Current function value: [3.18339395]\n",
-      "            Iterations: 9\n",
-      "            Function evaluations: 9\n",
-      "            Gradient evaluations: 9\n",
+      "            Current function value: 3.183393951639923\n",
+      "            Iterations: 5\n",
+      "            Function evaluations: 7\n",
+      "            Gradient evaluations: 5\n",
       "Optimization Complete\n",
       "-----------------------------------\n"
      ]
@@ -476,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "b3300006-16af-4db2-8b0e-6d93a33e6009",
    "metadata": {
     "execution": {
@@ -495,7 +485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
+   "id": "c5270da9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "dc74ebb8-19e0-444e-bdc1-d4e98ac0d026",
    "metadata": {
     "execution": {
@@ -509,12 +509,12 @@
    },
    "outputs": [],
    "source": [
-    "xopt = {key: prob.get_val(namingfunc(key, VAR))[0] for key in allvars}"
+    "xopt = {model.idmapping[key]: prob.get_val(namingfunc(key, VAR))[0] for key in allvars}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 34,
    "id": "c93bd683-3ac1-432a-9852-2eedc0c1a457",
    "metadata": {
     "execution": {
@@ -530,15 +530,15 @@
     {
      "data": {
       "text/plain": [
-       "{'y2': 3.7552778732648413,\n",
-       " 'y1': 3.1600001890218565,\n",
-       " 'a': -0.7510555746459193,\n",
-       " 'z2': 7.0091761203601424e-12,\n",
-       " 'z1': 1.9776389366281641,\n",
-       " 'x': 3.987175173358892e-14}"
+       "{z1: 1.9776388834629222,\n",
+       " z2: 0.0,\n",
+       " y1: 3.1599999999993003,\n",
+       " y2: 3.7552777669258646,\n",
+       " a: -0.7510555533851729,\n",
+       " x: 0.0}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "95caac8f-926b-4b9d-aca5-5cc341a911b6",
    "metadata": {
     "execution": {
@@ -565,15 +565,15 @@
     {
      "data": {
       "text/plain": [
-       "[[-0.7510555746459193],\n",
-       " [3.1600001890218565],\n",
-       " [3.755277873264841],\n",
-       " 3.183394138181799,\n",
-       " -1.8902185638935975e-07,\n",
-       " -20.24472212673516]"
+       "[[DeviceArray(-0.75105555, dtype=float64)],\n",
+       " [DeviceArray(3.16, dtype=float64)],\n",
+       " [DeviceArray(3.75527777, dtype=float64)],\n",
+       " DeviceArray(3.18339395, dtype=float64),\n",
+       " 6.998845947236987e-13,\n",
+       " -20.244722233074135]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,124 +581,6 @@
    "source": [
     "[comp.evaldict(xopt) for comp in components[0:6]]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "8d030727-849b-4134-885a-4d27e29b9fc4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-02T05:03:22.087991Z",
-     "iopub.status.busy": "2022-05-02T05:03:22.087991Z",
-     "iopub.status.idle": "2022-05-02T05:03:22.125388Z",
-     "shell.execute_reply": "2022-05-02T05:03:22.125388Z",
-     "shell.execute_reply.started": "2022-05-02T05:03:22.087991Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"700\"\n",
-       "            src=\"n2.html\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "            \n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2326ed49490>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "om.n2(prob)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "18b02a2c-1db1-499d-8269-4d83da5cdca6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-01T03:46:09.113434Z",
-     "iopub.status.busy": "2022-05-01T03:46:09.113434Z",
-     "iopub.status.idle": "2022-05-01T03:46:09.128211Z",
-     "shell.execute_reply": "2022-05-01T03:46:09.127659Z",
-     "shell.execute_reply.started": "2022-05-01T03:46:09.113434Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "workflow = generate_workflow(lookup_f, nedges, ntree, solvers_options={1: {'type': OPT}}, comp_options={2:OBJ, 3:NEQ, 4:NEQ})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "5f9c82dd-9a77-462f-8d75-24600f2450f4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-05-01T03:46:09.773529Z",
-     "iopub.status.busy": "2022-05-01T03:46:09.773529Z",
-     "iopub.status.idle": "2022-05-01T03:46:09.787514Z",
-     "shell.execute_reply": "2022-05-01T03:46:09.786514Z",
-     "shell.execute_reply.started": "2022-05-01T03:46:09.773529Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(OPT, None, 's_1', {'type': OPT, 'designvars': ('x', 'z1', 'z2')}),\n",
-       " (SOLVE, 's_1', 's_2', {'type': SOLVE}),\n",
-       " (IMPL,\n",
-       "  's_2',\n",
-       "  'res_f0_f1',\n",
-       "  [(['x_y2', 'x_z1', 'x_z2', 'x_x', 'x_y1'],\n",
-       "    ['x_y1'],\n",
-       "    <bound method Component.evaldict of (('y2', 'z1', 'z2', 'x', 'y1'), 0, (None,), 'None')>,\n",
-       "    <bound method Component.graddict of (('y2', 'z1', 'z2', 'x', 'y1'), 0, (None,), 'None')>,\n",
-       "    1.0),\n",
-       "   (['x_y1', 'x_z1', 'x_z2', 'x_y2'],\n",
-       "    ['x_y2'],\n",
-       "    <bound method Component.evaldict of (('y1', 'z1', 'z2', 'y2'), 1, (None,), 'None')>,\n",
-       "    <bound method Component.graddict of (('y1', 'z1', 'z2', 'y2'), 1, (None,), 'None')>,\n",
-       "    1.0)]),\n",
-       " (OBJ,\n",
-       "  s_1,\n",
-       "  OBJ,\n",
-       "  (('y1', 'y2', 'z1', 'x'), 2, (None,), 'x**2 + y1 + z1 + exp(-y2)')),\n",
-       " (NEQ, s_1, NEQ, (('y2',), 4, (None,), 'y2 - 24')),\n",
-       " (NEQ, s_1, NEQ, (('y1',), 3, (None,), '3.16 - y1'))]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "workflow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82d3a49f-bf7c-4819-bdfb-173939e00590",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
