--- a/applications/sellar_opt/sellar_gen7.ipynb
+++ b/applications/sellar_opt/sellar_gen7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c4e56a51",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "9b4adca5",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,12 @@
     ").minimize(\n",
     "    x3**2 + x2 + u1 + exp(-u2)\n",
     ")\n",
-    "FPF_AAO = FPF.config(eliminato=[discipline1, discipline2])"
+    "FPF_AAO = FPF.config(residuals=[discipline1, discipline2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "id": "7710488f",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "id": "7e835188",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "a93c85e7",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
        "3.183393951640044"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "f3f68846",
    "metadata": {},
    "outputs": [
@@ -95,8 +95,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x3 u1   x2 x1   u2  \n",
-      "0  3.16 0  1.98 3.76\n"
+      "x3 x2 u2   u1   x1  \n",
+      "0  0  3.76 3.16 1.98\n"
      ]
     }
    ],
