--- a/applications/sellar_opt/sellar_v4.ipynb
+++ b/applications/sellar_opt/sellar_v4.ipynb
@@ -6,14 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.compute import Var\n",
-    "from engine.foundations.functionals import Functional\n",
-    "from engine.foundations.functionals import Projectable\n",
-    "from engine.foundations.functionals import Problem\n",
-    "from engine.foundations.functionals import intersection\n",
-    "from engine.foundations.functionals import residual_solver\n",
-    "from engine.foundations.functionals import generate_opt_objects\n",
-    "from engine.foundations.functionals import eliminate\n",
+    "from src.v1.symbolic import Var\n",
+    "from src.v4.functionals import Functional\n",
+    "from src.v4.functionals import Projectable\n",
+    "from src.v4.functionals import Problem\n",
+    "from src.v4.functionals import intersection\n",
+    "from src.v4.functionals import residual_solver\n",
+    "from src.v4.functionals import generate_opt_objects\n",
+    "from src.v4.functionals import eliminate\n",
     "import numpy as np\n",
     "from sympy import exp"
    ]
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,9 +110,9 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mproblem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdict_in_only\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxopt\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\johan\\github\\minimdo\\minimdo\\modeling\\gen4\\compute.py:29\u001b[0m, in \u001b[0;36mEncodedFunction.dict_in_only\u001b[1;34m(self, d, **kwargs)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdict_in_only\u001b[39m(\u001b[38;5;28mself\u001b[39m, d\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m     28\u001b[0m     d \u001b[38;5;241m=\u001b[39m d \u001b[38;5;28;01mif\u001b[39;00m d \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mdict\u001b[39m()\n\u001b[1;32m---> 29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencoder\u001b[38;5;241m.\u001b[39mencode(d), \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkwargs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs})\n",
-      "File \u001b[1;32m<lambdifygenerated-13>:2\u001b[0m, in \u001b[0;36m_lambdifygenerated\u001b[1;34m(y_1, y_2, x, z_2)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_lambdifygenerated\u001b[39m(y_1, y_2, x, z_2):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mx\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_1\u001b[49m \u001b[38;5;241m+\u001b[39m z_2 \u001b[38;5;241m+\u001b[39m exp(\u001b[38;5;241m-\u001b[39my_2)\n",
+      "Input \u001b[1;32mIn [7]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mproblem\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobj\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdict_in_only\u001b[49m\u001b[43m(\u001b[49m\u001b[43mxopt\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\johan\\github\\minimdo\\minimdo\\src\\v4\\execution.py:29\u001b[0m, in \u001b[0;36mEncodedFunction.dict_in_only\u001b[1;34m(self, d, **kwargs)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdict_in_only\u001b[39m(\u001b[38;5;28mself\u001b[39m, d\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m     28\u001b[0m     d \u001b[38;5;241m=\u001b[39m d \u001b[38;5;28;01mif\u001b[39;00m d \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mdict\u001b[39m()\n\u001b[1;32m---> 29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mf(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencoder\u001b[38;5;241m.\u001b[39mencode(d), \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m{\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkwargs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs})\n",
+      "File \u001b[1;32m<lambdifygenerated-10>:2\u001b[0m, in \u001b[0;36m_lambdifygenerated\u001b[1;34m(y_1, y_2, z_2, x)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_lambdifygenerated\u001b[39m(y_1, y_2, z_2, x):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mx\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43my_1\u001b[49m \u001b[38;5;241m+\u001b[39m z_2 \u001b[38;5;241m+\u001b[39m exp(\u001b[38;5;241m-\u001b[39my_2)\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'DeviceArray' and 'NoneType'"
      ]
     }
