--- a/applications/satmini_opt/satmini_gen3.ipynb
+++ b/applications/satmini_opt/satmini_gen3.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "84eababc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from modeling.unitutils import ureg\n",
+    "from src.v1.symbolic import Var, Par\n",
+    "from src.v2.units import ureg\n",
     "from graph.graphutils import namefromsympy\n",
-    "from modeling.compute import Var, Par\n",
-    "from modeling.gen3.nesting import Model, adda, addsolver, addobj, addeq, OPT, setsolvefor, evalexpr\n",
+    "from src.v3.nesting import Model, adda, addsolver, addobj, addeq, OPT, setsolvefor, evalexpr\n",
     "from graph.workflow import get_f, order_from_tree, default_solver_options, mdao_workflow, implicit_comp_name\n",
-    "from solver.workflow_mdao import mdao_workflow_with_args\n",
-    "from solver.assembly import build_archi\n",
-    "from solver.postprocess import print_outputs, print_inputs, update_varval\n",
+    "from src.v2.workflow_mdao import mdao_workflow_with_args\n",
+    "from src.v2.mdaobuild import build_archi\n",
+    "from src.v2.postprocess import print_outputs, print_inputs, update_varval\n",
     "import openmdao.api as om\n",
     "import numpy as np\n",
     "import sympy as sp"
